changed div to classs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div classname="background"> 
+    <div class="background"> 
 
     </div>
 </body>
