--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="background"> 
+    <div class="container"> 
         <p> first</p>
 
     </div>
